# Applications

./: README.md
DesktopSelector/: 35-ds-start.xsetup  README.md  ds.py  ds.ui  ds_lang.ts  gettexter  make-release  newlangs.pot  pics.qrc  updatelang
DesktopSelector/lang/: ds_hu.qm  ds_hu.ts
DesktopSelector/locale/: ds.po  ds.pot  ds_hu.mo
blackPanther-myinfo-tool/: MyInfo.py  MyInfo.qrc  MyInfo.ui  MyInfo_2017.ui  README.md  core.py  kwakeonlan.py  kwakeonlan.ui  makchanger.py  myinfo-tool  myinfo-tool.py  progress.py  pycpu.py  signal.py  updatelang
blackPanther-myinfo-tool/translations/: lang_xx.ts  mit_hu.qm  mit_hu.ts
blackPanther-notify/: bubbleconf  bubblemsg  bubblemsg.conf  notify-more.py
blackPanther-notify-old/: README.md
blackPanther-notify-old/bubbled/: AUTHORS  Doxyfile  Makefile.in  README  TODO  bubbled.desktop  bubbled.kdevelop  bubbled.kdevelop.pcs  bubbled.kdevses  configure  configure.in  (+1 more)
blackPanther-notify-old/bubbled/src/: Makefile.am  Makefile.in  bubbled.desktop  bubbled.ui  cbase.cpp  cbase.h  cbubbled.cpp  cbubbled.h  main.cpp
blackPanther-profiler/: README  about.py  applist.txt  confgen.py  example.cfg  gouplist.txt  groups.txt  migration  profiler.py  raw_rc.py  recommend.cfg  setup.py  temporal-generate.py  todo.txt  wizardstart
blackPanther-usbmaker/: MANIFEST  MANIFEST.in  MANIFEST.in.binary  Makefile  PKG-INFO  README.txt  gettext_findtranslate  liveusb-creator  liveusb-creator.spec  release.bat  setup.py  start.sh
devede-3.23.0/: devede_other.py
ras/: README  main.ui  ras.py  ras.qrc  rasrc.py  rastest.py
(+124 files in other folders)
